[tool.poetry]
name = "data-structures-notes"
version = "0.1.0"
description = ""
authors = ["Marcello Lamonaca <marcello@lamonaca.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
